--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -129,7 +129,23 @@ body {
   display: flex;
   justify-content: stretch;
 }
-
+h2.sectionTitle {
+  font-size: 22px;
+  font-weight: lighter;
+  color: #4a90e2;
+  margin: 0;
+}
+h2.sectionTitle .icon {
+  color: #fff;
+  background-color: #4a90e2;
+  border-radius: 50%;
+  width: 2em;
+  line-height: 2em;
+  text-align: center;
+  font-size: 14px;
+  vertical-align: text-bottom;
+  margin-right: 10px;
+}
 /************************
   DISPLAY HELPER ELEMENTS
 *************************/
@@ -141,9 +157,11 @@ body {
   TASK DESCRIPTION
 *****************/
 #taskIntro {
-  padding: 5px 10px;
+  padding: 10px 20px;
   overflow: auto;
+  color: #9b9b9b;
 }
+
 
 /*****************
   TASK GRID & TESTS
