--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -228,12 +228,39 @@ h2.sectionTitle .icon {
   cursor: pointer;
   padding: 2px;
   text-transform: uppercase;
+  position: relative;
 }
 #testSelector .testTab.currentTest {
   box-shadow: 0 1px 0 0px #ccc;
   color: #4a90e2;
   border-radius: 0 0 10px 10px;
   background-color: #fff;
+}
+#testSelector .testTab.currentTest::before,
+#testSelector .testTab.currentTest:not(:last-child)::after {
+  content: " ";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: transparent;
+}
+#testSelector .testTab.currentTest::before {
+  top: -4px;
+  border-radius: 0 70%;
+  box-shadow: 0px 1px 0 #ccc inset;
+  left: -10px;
+  z-index: 1;
+  border-top: 4px solid #fff;
+  border-right: 6px solid #fff;
+}
+#testSelector .testTab.currentTest::after {
+  top: -4px;
+  border-radius: 70% 0;
+  box-shadow: 0px 1px 0 #ccc inset;
+  right: -10px;
+  z-index: 1;
+  border-top: 4px solid #fff;
+  border-left: 6px solid #fff;
 }
 #testSelector .tabs .testTab:not(.currentTest) {
   box-shadow: 0 1px 0 0px #ccc inset;
