--- a/pemFioi/taskStyles-mobileFirst.css
+++ b/pemFioi/taskStyles-mobileFirst.css
@@ -98,7 +98,8 @@ img {
   }
   #tabsMenu .li.prev a::before,
   #tabsMenu .li.next a::before {
-    font-family: FontAwesome;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
     font-size: 32px;
   }
   #tabsMenu .li.prev a::before {
