--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: 'Titillium Web';
+  src: url('../../fonts/titilliumweb-light.woff2') format('woff2'),
+       url('../../fonts/titilliumweb-light.woff') format('woff'),
+       url('../../fonts/titilliumweb-light.ttf') format('truetype');
+  font-weight: 100;
+}
+@font-face {
+  font-family: 'Titillium Web';
+  src: url('../../fonts/titilliumweb-regular.woff2') format('woff2'),
+       url('../../fonts/titilliumweb-regular.woff') format('woff'),
+       url('../../fonts/titilliumweb-regular.ttf') format('truetype');
+  font-weight: normal;
+}
+@font-face {
+  font-family: 'Titillium Web';
+  src: url('../../fonts/titilliumweb-bold.woff2') format('woff2'),
+       url('../../fonts/titilliumweb-bold.woff') format('woff'),
+       url('../../fonts/titilliumweb-bold.ttf') format('truetype');
+  font-weight: bold;
+}
 html, body {
   height: 100%;
   margin: 0;
@@ -7,6 +28,7 @@ body {
   font-size: 12px;
   position: relative;
   overflow-x: hidden;
+  font-family: 'Titillium Web', Arial, Helvetica, sans-serif;
 }
 body.blockly > *,
 body > * {
