fix validate and restart buttons styles

--- a/pemFioi/taskStyles-0.1_M.css
+++ b/pemFioi/taskStyles-0.1_M.css
@@ -327,9 +327,9 @@ h1 .stars {
 #displayHelper_cancel {
    display: inline-block;
 }
-#displayHelper_validate > [value="Valider"],
-#displayHelper_cancel > [value="Recommencer"] {
-   margin: 0 10px;
+#displayHelper_validate > input,
+#displayHelper_cancel > input {
+   margin: 0 20px;
    width: 9em;
 }
 #displayHelper_saved {
