--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -256,6 +256,7 @@ h2.sectionTitle .icon {
   color: #4a90e2;
   border-radius: 0 0 10px 10px;
   background-color: #fff;
+  z-index: 1;
 }
 #testSelector .testTab.currentTest::before,
 #testSelector .testTab.currentTest:not(:last-child)::after {
